Makes EventExecutor static...